Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 <a name="requirements" class="anchor" href="#requirements"><span class="octicon octicon-link"></span></a>Requirements</h2>
 
 <ul>
+<li>Tested with node <code>&gt;= 0.8</code>.</li>
 <li>Java version 6 or higher.</li>
 <li>
 <code>node-java</code>: See <a href="https://github.com/nearinfinity/node-java/blob/master/README.md#installation-linuxwindows">its installation instructions</a>.</li>
@@ -247,6 +248,13 @@
 <a name="history" class="anchor" href="#history"><span class="octicon octicon-link"></span></a>History</h2>
 
 <h3>
+<a name="021" class="anchor" href="#021"><span class="octicon octicon-link"></span></a>0.2.1</h3>
+
+<ul>
+<li>Travis hostname errors fixed.</li>
+<li>Removed node <code>0.6</code> support: not supported by the last <code>node-java</code> version.</li>
+<li>Homepage changed to GitHub Pages.</li>
+</ul><h3>
 <a name="020" class="anchor" href="#020"><span class="octicon octicon-link"></span></a>0.2.0</h3>
 
 <ul>
